--- a/UI/ColorVision.UI/Properties/Resources.fr.resx
+++ b/UI/ColorVision.UI/Properties/Resources.fr.resx
@@ -270,4 +270,10 @@
   <data name="MenuPrint" xml:space="preserve">
     <value>Imprimer</value>
   </data>
+  <data name="MenuNew" xml:space="preserve">
+    <value>Nouveau(N)</value>
+  </data>
+  <data name="MenuClose" xml:space="preserve">
+    <value>_Fermer</value>
+  </data>
 </root>
