--- a/Engine/ColorVision.Engine/MultilingualResources/ColorVision.Engine.zh-Hant.xlf
+++ b/Engine/ColorVision.Engine/MultilingualResources/ColorVision.Engine.zh-Hant.xlf
@@ -1385,6 +1385,10 @@
           <source>编辑(_E)</source>
           <target state="new">編輯(_E)</target>
         </trans-unit>
+        <trans-unit id="MenuEngine" translate="yes" xml:space="preserve">
+          <source>引擎(_N)</source>
+          <target state="new">引擎(_N)</target>
+        </trans-unit>
         <trans-unit id="MenuFOV" translate="yes" xml:space="preserve">
           <source>_FOV模板设置</source>
           <target state="new">FOV模板設定(B)";</target>
