--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -819,4 +819,7 @@
   <data name="Symbol" xml:space="preserve">
     <value>象徵</value>
   </data>
+  <data name="MenuEngine" xml:space="preserve">
+    <value>引擎(_N)</value>
+  </data>
 </root>
