--- a/Engine/ColorVision.Engine/MultilingualResources/ColorVision.Engine.ja.xlf
+++ b/Engine/ColorVision.Engine/MultilingualResources/ColorVision.Engine.ja.xlf
@@ -1381,6 +1381,10 @@
           <source>编辑(_E)</source>
           <target state="new">編集する (_E)</target>
         </trans-unit>
+        <trans-unit id="MenuEngine" translate="yes" xml:space="preserve">
+          <source>引擎(_N)</source>
+          <target state="new">エンジン（_N）</target>
+        </trans-unit>
         <trans-unit id="MenuFOV" translate="yes" xml:space="preserve">
           <source>_FOV模板设置</source>
           <target state="new">FOVテンプレート設定(B)」;</target>
