--- a/Engine/ColorVision.Engine/MultilingualResources/ColorVision.Engine.ru.xlf
+++ b/Engine/ColorVision.Engine/MultilingualResources/ColorVision.Engine.ru.xlf
@@ -1381,6 +1381,10 @@
           <source>编辑(_E)</source>
           <target state="new">Изменить (Е)</target>
         </trans-unit>
+        <trans-unit id="MenuEngine" translate="yes" xml:space="preserve">
+          <source>引擎(_N)</source>
+          <target state="new">Двигатель (Н)</target>
+        </trans-unit>
         <trans-unit id="MenuFOV" translate="yes" xml:space="preserve">
           <source>_FOV模板设置</source>
           <target state="new">Настройки шаблона поля зрения (B)";</target>
