--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -819,4 +819,7 @@
   <data name="Symbol" xml:space="preserve">
     <value>Символ</value>
   </data>
+  <data name="MenuEngine" xml:space="preserve">
+    <value>Двигатель (Н)</value>
+  </data>
 </root>
