--- a/UI/ColorVision.Scheduler/Properties/Resources.ja.resx
+++ b/UI/ColorVision.Scheduler/Properties/Resources.ja.resx
@@ -138,4 +138,7 @@
   <data name="Shutdown" xml:space="preserve">
     <value>シャットダウン</value>
   </data>
+  <data name="CronExpression" xml:space="preserve">
+    <value>CronExpression（クロンクロノ式）</value>
+  </data>
 </root>
