--- a/UI/ColorVision.Scheduler/Properties/Resources.ko.resx
+++ b/UI/ColorVision.Scheduler/Properties/Resources.ko.resx
@@ -138,4 +138,7 @@
   <data name="Shutdown" xml:space="preserve">
     <value>종료</value>
   </data>
+  <data name="CronExpression" xml:space="preserve">
+    <value>크론 표현식</value>
+  </data>
 </root>
