--- a/UI/ColorVision.Scheduler/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.Scheduler/Properties/Resources.zh-Hant.resx
@@ -138,4 +138,7 @@
   <data name="Shutdown" xml:space="preserve">
     <value>關閉</value>
   </data>
+  <data name="CronExpression" xml:space="preserve">
+    <value>CronExpression（排程表達式）</value>
+  </data>
 </root>
