--- a/UI/ColorVision.Scheduler/Properties/Resources.fr.resx
+++ b/UI/ColorVision.Scheduler/Properties/Resources.fr.resx
@@ -141,4 +141,34 @@
   <data name="CronExpression" xml:space="preserve">
     <value>ExpressionCron</value>
   </data>
+  <data name="GroupName" xml:space="preserve">
+    <value>NomDuGroupe</value>
+  </data>
+  <data name="JobName" xml:space="preserve">
+    <value>NomDuPoste</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>Statut</value>
+  </data>
+  <data name="RunCount" xml:space="preserve">
+    <value>CompteurDeCourses</value>
+  </data>
+  <data name="NextFireTime" xml:space="preserve">
+    <value>ProchaineHeureDeDéclenchement</value>
+  </data>
+  <data name="PreviousFireTime" xml:space="preserve">
+    <value>HeureDuDernierDéclenchement</value>
+  </data>
+  <data name="Stop" xml:space="preserve">
+    <value>Arrêtez</value>
+  </data>
+  <data name="Resume" xml:space="preserve">
+    <value>rétablissement</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Supprimer</value>
+  </data>
+  <data name="Command" xml:space="preserve">
+    <value>Commande</value>
+  </data>
 </root>
