--- a/UI/ColorVision.Scheduler/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.Scheduler/Properties/Resources.zh-Hant.resx
@@ -141,4 +141,34 @@
   <data name="CronExpression" xml:space="preserve">
     <value>CronExpression（排程表達式）</value>
   </data>
+  <data name="GroupName" xml:space="preserve">
+    <value>群組名稱</value>
+  </data>
+  <data name="JobName" xml:space="preserve">
+    <value>任務名稱</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>狀態</value>
+  </data>
+  <data name="RunCount" xml:space="preserve">
+    <value>執行次數</value>
+  </data>
+  <data name="NextFireTime" xml:space="preserve">
+    <value>下一次觸發時間</value>
+  </data>
+  <data name="PreviousFireTime" xml:space="preserve">
+    <value>上次觸發時間</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>刪除</value>
+  </data>
+  <data name="Stop" xml:space="preserve">
+    <value>停止</value>
+  </data>
+  <data name="Command" xml:space="preserve">
+    <value>命令</value>
+  </data>
+  <data name="Resume" xml:space="preserve">
+    <value>恢復</value>
+  </data>
 </root>
