--- a/ColorVision/Properties/Resources.zh-hant.resx
+++ b/ColorVision/Properties/Resources.zh-hant.resx
@@ -300,4 +300,10 @@
   <data name="MenuEdit" xml:space="preserve">
     <value>編輯(_E)</value>
   </data>
+  <data name="ProjectManagerWindow" xml:space="preserve">
+    <value>專案管理視窗</value>
+  </data>
+  <data name="PluginManagerWindow" xml:space="preserve">
+    <value>插件管理器視窗</value>
+  </data>
 </root>
