--- a/ColorVision/Properties/Resources.ko.resx
+++ b/ColorVision/Properties/Resources.ko.resx
@@ -306,4 +306,16 @@
   <data name="PluginManagerWindow" xml:space="preserve">
     <value>플러그인 관리자 창</value>
   </data>
+  <data name="Version" xml:space="preserve">
+    <value>버전</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>플러그인 이름</value>
+  </data>
+  <data name="BuildDate" xml:space="preserve">
+    <value>빌드 날짜</value>
+  </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>프로젝트명</value>
+  </data>
 </root>
