--- a/ColorVision/Properties/Resources.zh-hant.resx
+++ b/ColorVision/Properties/Resources.zh-hant.resx
@@ -306,4 +306,16 @@
   <data name="PluginManagerWindow" xml:space="preserve">
     <value>插件管理器視窗</value>
   </data>
+  <data name="Version" xml:space="preserve">
+    <value>版本</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>插件名稱</value>
+  </data>
+  <data name="BuildDate" xml:space="preserve">
+    <value>建置日期</value>
+  </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>專案名稱</value>
+  </data>
 </root>
