--- a/ColorVision/Properties/Resources.en.resx
+++ b/ColorVision/Properties/Resources.en.resx
@@ -306,4 +306,16 @@
   <data name="PluginManagerWindow" xml:space="preserve">
     <value>PluginManagerWindow</value>
   </data>
+  <data name="Version" xml:space="preserve">
+    <value>Version</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="BuildDate" xml:space="preserve">
+    <value>BuildDate</value>
+  </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>Name</value>
+  </data>
 </root>
