--- a/ColorVision/Properties/Resources.ru.resx
+++ b/ColorVision/Properties/Resources.ru.resx
@@ -306,4 +306,16 @@
   <data name="PluginManagerWindow" xml:space="preserve">
     <value>ОкноМенеджераПлагинов</value>
   </data>
+  <data name="Version" xml:space="preserve">
+    <value>Версия</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>название плагина</value>
+  </data>
+  <data name="BuildDate" xml:space="preserve">
+    <value>ДатаСборки</value>
+  </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>НазваниеПроекта</value>
+  </data>
 </root>
