--- a/ColorVision/Properties/Resources.fr.resx
+++ b/ColorVision/Properties/Resources.fr.resx
@@ -318,4 +318,7 @@
   <data name="ProjectName" xml:space="preserve">
     <value>NomDuProjet</value>
   </data>
+  <data name="Command" xml:space="preserve">
+    <value>Commande</value>
+  </data>
 </root>
