--- a/ColorVision/Properties/Resources.ja.resx
+++ b/ColorVision/Properties/Resources.ja.resx
@@ -318,4 +318,7 @@
   <data name="ProjectName" xml:space="preserve">
     <value>プロジェクト名</value>
   </data>
+  <data name="Command" xml:space="preserve">
+    <value>コマンド</value>
+  </data>
 </root>
