--- a/ColorVision/Properties/Resources.resx
+++ b/ColorVision/Properties/Resources.resx
@@ -318,4 +318,7 @@
   <data name="ProjectName" xml:space="preserve">
     <value>项目名称</value>
   </data>
+  <data name="Command" xml:space="preserve">
+    <value>命令</value>
+  </data>
 </root>
