--- a/ColorVision/Properties/Resources.zh-hant.resx
+++ b/ColorVision/Properties/Resources.zh-hant.resx
@@ -318,4 +318,7 @@
   <data name="ProjectName" xml:space="preserve">
     <value>專案名稱</value>
   </data>
+  <data name="Command" xml:space="preserve">
+    <value>命令</value>
+  </data>
 </root>
