--- a/UI/ColorVision.Solution/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.zh-Hant.resx
@@ -228,4 +228,10 @@
   <data name="MenuCopy" xml:space="preserve">
     <value>複製(C)</value>
   </data>
+  <data name="NewFolder" xml:space="preserve">
+    <value>新資料夾</value>
+  </data>
+  <data name="FolderDeleteSign" xml:space="preserve">
+    <value>及其所有內容將永久刪除。</value>
+  </data>
 </root>
