--- a/UI/ColorVision.Solution/Properties/Resources.fr.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.fr.resx
@@ -141,9 +141,6 @@
   <data name="Edit" xml:space="preserve">
     <value>modifier</value>
   </data>
-  <data name="Delete" xml:space="preserve">
-    <value>supprimer</value>
-  </data>
   <data name="Create" xml:space="preserve">
     <value>créer</value>
   </data>
@@ -222,16 +219,13 @@
   <data name="MenuOpenFileInExplorer" xml:space="preserve">
     <value>Ouvrez le dossier dans le gestionnaire de fichiers (X)</value>
   </data>
-  <data name="MenuCut" xml:space="preserve">
-    <value>Couper(T)</value>
-  </data>
-  <data name="MenuCopy" xml:space="preserve">
-    <value>Copie(C)</value>
-  </data>
   <data name="NewFolder" xml:space="preserve">
     <value>NouveauDossier</value>
   </data>
   <data name="FolderDeleteSign" xml:space="preserve">
     <value>et tout son contenu sera définitivement supprimé.</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Supprimer</value>
   </data>
 </root>
