--- a/UI/ColorVision.Solution/Properties/Resources.ru.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.ru.resx
@@ -141,9 +141,6 @@
   <data name="Edit" xml:space="preserve">
     <value>Редактировать</value>
   </data>
-  <data name="Delete" xml:space="preserve">
-    <value>Удалить</value>
-  </data>
   <data name="Create" xml:space="preserve">
     <value>создавать</value>
   </data>
@@ -222,16 +219,13 @@
   <data name="MenuOpenFileInExplorer" xml:space="preserve">
     <value>Откройте папку в файловом менеджере (X)</value>
   </data>
-  <data name="MenuCut" xml:space="preserve">
-    <value>Вырезать(Т)</value>
-  </data>
-  <data name="MenuCopy" xml:space="preserve">
-    <value>Копировать (С)</value>
-  </data>
   <data name="NewFolder" xml:space="preserve">
     <value>НоваяПапка</value>
   </data>
   <data name="FolderDeleteSign" xml:space="preserve">
     <value>и все его содержимое будет удалено навсегда.</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>удалить</value>
   </data>
 </root>
